// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout|Grid Example 1 - basics 1`] = `
.emotion-14 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-13 {
  position: relative;
  margin: 0 8px;
  max-width: 100%;
  width: auto;
  padding-left: 4px;
  padding-right: 4px;
  background-color: #f6f6f6;
}

@media (min-width:768px) {
  .emotion-13 {
    margin: 0 auto;
    max-width: 640px;
    width: 640px;
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media (min-width:990px) {
  .emotion-13 {
    max-width: 1152px;
    width: 1152px;
    padding-left: 12px;
    padding-right: 12px;
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -4px;
  margin-right: -4px;
  margin-top: 8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
}

@media (min-width:768px) {
  .emotion-1 {
    margin-left: -8px;
    margin-right: -8px;
    margin-top: 16px;
  }
}

@media (min-width:990px) {
  .emotion-1 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

.emotion-0 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
}

@media (min-width:768px) {
  .emotion-0 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -ms-flex-preferred-size: calc(100% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-0 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -ms-flex-preferred-size: calc(100% - 12px * 2);
  }
}

.emotion-2 {
  box-sizing: border-box;
  display: none;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
  background-color: #65717b;
  border: #b0b8bf 1px solid;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  border-radius: 1px;
  color: #f6f6f6;
}

@media (min-width:768px) {
  .emotion-2 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -ms-flex-preferred-size: calc(25% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-2 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 16.666666666666664%;
    -ms-flex-preferred-size: 16.666666666666664%;
    flex-basis: 16.666666666666664%;
    -ms-flex-preferred-size: calc(16.666666666666664% - 12px * 2);
  }
}

.emotion-3 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
  background-color: #65717b;
  border: #b0b8bf 1px solid;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  border-radius: 1px;
  color: #f6f6f6;
}

@media (min-width:768px) {
  .emotion-3 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -ms-flex-preferred-size: calc(25% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-3 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 16.666666666666664%;
    -ms-flex-preferred-size: 16.666666666666664%;
    flex-basis: 16.666666666666664%;
    -ms-flex-preferred-size: calc(16.666666666666664% - 12px * 2);
  }
}

.emotion-4 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
  background-color: #65717b;
  border: #b0b8bf 1px solid;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  border-radius: 1px;
  color: #f6f6f6;
}

@media (min-width:768px) {
  .emotion-4 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -ms-flex-preferred-size: calc(25% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-4 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 33.33333333333333%;
    -ms-flex-preferred-size: 33.33333333333333%;
    flex-basis: 33.33333333333333%;
    -ms-flex-preferred-size: calc(33.33333333333333% - 12px * 2);
  }
}

.emotion-7 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
  background-color: #65717b;
  border: #b0b8bf 1px solid;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  border-radius: 1px;
  color: #f6f6f6;
}

@media (min-width:768px) {
  .emotion-7 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -ms-flex-preferred-size: calc(50% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-7 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 66.66666666666666%;
    -ms-flex-preferred-size: 66.66666666666666%;
    flex-basis: 66.66666666666666%;
    -ms-flex-preferred-size: calc(66.66666666666666% - 12px * 2);
  }
}

.emotion-8 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
  background-color: #65717b;
  border: #b0b8bf 1px solid;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  border-radius: 1px;
  color: #f6f6f6;
}

@media (min-width:768px) {
  .emotion-8 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -ms-flex-preferred-size: calc(50% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-8 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 33.33333333333333%;
    -ms-flex-preferred-size: 33.33333333333333%;
    flex-basis: 33.33333333333333%;
    -ms-flex-preferred-size: calc(33.33333333333333% - 12px * 2);
  }
}

.emotion-10 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -ms-flex-preferred-size: calc(50% - 4px * 2);
  background-color: #65717b;
  border: #b0b8bf 1px solid;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  border-radius: 1px;
  color: #f6f6f6;
}

@media (min-width:768px) {
  .emotion-10 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -ms-flex-preferred-size: calc(50% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-10 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -ms-flex-preferred-size: calc(50% - 12px * 2);
  }
}

<div
  className="emotion-14"
>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-0"
      >
        <p>
          Here is an example of a grid which will turn into 100% width columns on mobile.
        </p>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
        hide-s={true}
        l={0.16666666666666666}
        m={0.25}
      >
        .us-col-md-2
      </div>
      <div
        className="emotion-3"
        l={0.16666666666666666}
        m={0.25}
      >
        .us-col-md-2
      </div>
      <div
        className="emotion-4"
        l={0.3333333333333333}
        m={0.25}
      >
        .us-col-md-4
      </div>
      <div
        className="emotion-4"
        l={0.3333333333333333}
        m={0.25}
      >
        .us-col-md-4
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        className="emotion-7"
        l={0.6666666666666666}
        m={0.5}
      >
        .us-col-md-2
      </div>
      <div
        className="emotion-8"
        l={0.3333333333333333}
        m={0.5}
      >
        .us-col-md-4
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        className="emotion-10"
        l={0.5}
        m={0.5}
        s={0.5}
      >
        .us-col-md-2
      </div>
      <div
        className="emotion-10"
        l={0.5}
        m={0.5}
        s={0.5}
      >
        .us-col-md-4
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout|Grid Example 2 - center 1`] = `
.emotion-3 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-2 {
  position: relative;
  margin: 0 auto;
  max-width: 100%;
  width: auto;
  padding-left: 4px;
  padding-right: 4px;
  background-color: #f6f6f6;
}

@media (min-width:768px) {
  .emotion-2 {
    max-width: 640px;
    width: 640px;
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media (min-width:990px) {
  .emotion-2 {
    max-width: 1152px;
    width: 1152px;
    padding-left: 12px;
    padding-right: 12px;
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
}

@media (min-width:768px) {
  .emotion-1 {
    margin-left: -8px;
    margin-right: -8px;
  }
}

@media (min-width:990px) {
  .emotion-1 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

.emotion-0 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
}

@media (min-width:768px) {
  .emotion-0 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -ms-flex-preferred-size: calc(50% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-0 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -ms-flex-preferred-size: calc(50% - 12px * 2);
  }
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-0"
        l={0.5}
        m={0.5}
      >
        <p>
          Here is an example of a grid which will turn into 100% width columns on mobile.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout|Grid Example 3 - nested grids 1`] = `
.emotion-10 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-7 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
}

@media (min-width:768px) {
  .emotion-7 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -ms-flex-preferred-size: calc(100% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-7 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -ms-flex-preferred-size: calc(100% - 12px * 2);
  }
}

.emotion-2 {
  background-color: #65717b;
  border: #b0b8bf 1px solid;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  border-radius: 1px;
  color: #f6f6f6;
}

.emotion-9 {
  position: relative;
  margin: 0 auto;
  max-width: 100%;
  width: auto;
  padding-left: 4px;
  padding-right: 4px;
  background-color: #f6f6f6;
}

@media (min-width:768px) {
  .emotion-9 {
    max-width: 640px;
    width: 640px;
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media (min-width:990px) {
  .emotion-9 {
    max-width: 1152px;
    width: 1152px;
    padding-left: 12px;
    padding-right: 12px;
  }
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
}

@media (min-width:768px) {
  .emotion-8 {
    margin-left: -8px;
    margin-right: -8px;
  }
}

@media (min-width:990px) {
  .emotion-8 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (min-width:768px) {
  .emotion-1 {
    margin-left: -8px;
    margin-right: -8px;
  }
}

@media (min-width:990px) {
  .emotion-1 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

.emotion-0 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
}

@media (min-width:768px) {
  .emotion-0 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 75%;
    -ms-flex-preferred-size: 75%;
    flex-basis: 75%;
    -ms-flex-preferred-size: calc(75% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-0 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 66.66666666666666%;
    -ms-flex-preferred-size: 66.66666666666666%;
    flex-basis: 66.66666666666666%;
    -ms-flex-preferred-size: calc(66.66666666666666% - 12px * 2);
  }
}

.emotion-3 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -ms-flex-preferred-size: calc(50% - 4px * 2);
}

@media (min-width:768px) {
  .emotion-3 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -ms-flex-preferred-size: calc(50% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-3 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -ms-flex-preferred-size: calc(50% - 12px * 2);
  }
}

<div
  className="emotion-10"
>
  <div
    className="emotion-9"
  >
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-0"
            l={0.6666666666666666}
            m={0.75}
          >
            <h2>
              A little header
            </h2>
          </div>
        </div>
        <div
          className="emotion-1"
        >
          <div
            className="emotion-3"
            l={0.5}
            m={0.5}
            s={0.5}
          >
            <div
              className="emotion-2"
            >
              Something
            </div>
          </div>
          <div
            className="emotion-3"
            l={0.5}
            m={0.5}
            s={0.5}
          >
            <div
              className="emotion-2"
            >
              Something else
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout|Grid Example 4 - passing screen sizes 1`] = `
.emotion-12 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-2 {
  background-color: #65717b;
  border: #b0b8bf 1px solid;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  border-radius: 1px;
  color: #f6f6f6;
}

.emotion-0 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
}

@media (min-width:768px) {
  .emotion-0 {
    display: block;
    padding-left: 8px;
    padding-right: 8px;
    -webkit-flex-basis: 75%;
    -ms-flex-preferred-size: 75%;
    flex-basis: 75%;
    -ms-flex-preferred-size: calc(75% - 8px * 2);
  }
}

@media (min-width:990px) {
  .emotion-0 {
    display: block;
    padding-left: 12px;
    padding-right: 12px;
    -webkit-flex-basis: 66.66666666666666%;
    -ms-flex-preferred-size: 66.66666666666666%;
    flex-basis: 66.66666666666666%;
    -ms-flex-preferred-size: calc(66.66666666666666% - 12px * 2);
  }
}

.emotion-11 {
  position: relative;
  margin: 0 auto;
  max-width: 100%;
  width: auto;
  padding-left: 4px;
  padding-right: 4px;
  background-color: #f6f6f6;
}

@media (min-width:768px) {
  .emotion-11 {
    max-width: 740px;
    width: 740px;
    padding-left: 4px;
    padding-right: 4px;
  }
}

@media (min-width:990px) {
  .emotion-11 {
    max-width: 990px;
    width: 990px;
    padding-left: 4px;
    padding-right: 4px;
  }
}

.emotion-10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
}

@media (min-width:768px) {
  .emotion-10 {
    margin-left: -4px;
    margin-right: -4px;
  }
}

@media (min-width:990px) {
  .emotion-10 {
    margin-left: -4px;
    margin-right: -4px;
  }
}

.emotion-9 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -ms-flex-preferred-size: calc(100% - 4px * 2);
}

@media (min-width:768px) {
  .emotion-9 {
    display: block;
    padding-left: 4px;
    padding-right: 4px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -ms-flex-preferred-size: calc(100% - 4px * 2);
  }
}

@media (min-width:990px) {
  .emotion-9 {
    display: block;
    padding-left: 4px;
    padding-right: 4px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -ms-flex-preferred-size: calc(100% - 4px * 2);
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (min-width:768px) {
  .emotion-1 {
    margin-left: -4px;
    margin-right: -4px;
  }
}

@media (min-width:990px) {
  .emotion-1 {
    margin-left: -4px;
    margin-right: -4px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  display: block;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex-basis: 33.33333333333333%;
  -ms-flex-preferred-size: 33.33333333333333%;
  flex-basis: 33.33333333333333%;
  -ms-flex-preferred-size: calc(33.33333333333333% - 4px * 2);
}

@media (min-width:768px) {
  .emotion-3 {
    display: block;
    padding-left: 4px;
    padding-right: 4px;
    -webkit-flex-basis: 33.33333333333333%;
    -ms-flex-preferred-size: 33.33333333333333%;
    flex-basis: 33.33333333333333%;
    -ms-flex-preferred-size: calc(33.33333333333333% - 4px * 2);
  }
}

@media (min-width:990px) {
  .emotion-3 {
    display: block;
    padding-left: 4px;
    padding-right: 4px;
    -webkit-flex-basis: 33.33333333333333%;
    -ms-flex-preferred-size: 33.33333333333333%;
    flex-basis: 33.33333333333333%;
    -ms-flex-preferred-size: calc(33.33333333333333% - 4px * 2);
  }
}

<div
  className="emotion-12"
>
  <div
    className="emotion-11"
  >
    <div
      className="emotion-10"
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-0"
            l={0.6666666666666666}
            m={0.75}
          >
            <h2>
              A little header
            </h2>
          </div>
        </div>
        <div
          className="emotion-1"
        >
          <div
            className="emotion-3"
            l={0.3333333333333333}
            m={0.3333333333333333}
            s={0.3333333333333333}
          >
            <div
              className="emotion-2"
            >
              Something
            </div>
          </div>
          <div
            className="emotion-3"
            l={0.3333333333333333}
            m={0.3333333333333333}
            s={0.3333333333333333}
          >
            <div
              className="emotion-2"
            >
              Something
            </div>
          </div>
          <div
            className="emotion-3"
            l={0.3333333333333333}
            m={0.3333333333333333}
            s={0.3333333333333333}
          >
            <div
              className="emotion-2"
            >
              Something else
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
